--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/upify
+MONGO_URI="mongodb+srv://muzzammilafridi1319_db_user:Pvqan1GGnglFjMQ1@cluster0.paaexoa.mongodb.net/?appName=Cluster0/unifyy"
 JWT_SECRET=itsNoMoreSecret
 JWT_REFRESH_SECRET=your_refresh_token_secret
